--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?3.5.0/build/cssreset/cssreset-min.css"/>
     <style type="text/css">
         html {
-            background-color: #000;
+            background-color: #ddd;
         }
 
         body {
