--- a/index.html
+++ b/index.html
@@ -1,94 +1,40 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-    <title>Console</title>
-    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?3.5.0/build/cssreset/cssreset-min.css"/>
-    <style type="text/css">
-        html {
-            background-color: #000;
-        }
-
-        body {
-            font-family: "Lucida Console";
-            font-size: 13px;
-            color: #0f0;
-        }
-
-        #in {
-            display: block;
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            padding: 8px;
-            border-color: #0f0;
-            border-width: 3px 0 0 0;
-            background-color: #000;
-            color: #0f0;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <title>Console Reader - Teamwork - JS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/css.css"/>
 </head>
 <body>
-<div id="out"></div>
-<input id="in" tabindex="0"/>
+<h1>&#8902; THE CONSOLE &#8902;</h1>
+<textarea id="output" disabled="disabled"></textarea>
+<br>
+
+<h3>TYPE YOUR COMMAND HERE:</h3>
+<input id="input"/>
+<h4>append || prepend || reverse || insert || delete || roll left || roll right || sort || count || end</h4>
+<button id="submit">&#62;&#62; Submit &#60;&#60;</button>
+<br><br><br>
+
+<div id="credentials">
+    <h2>JavaScript Teamwork - List Processing Task:</h2>
+
+    <hr id="hr">
+    <ul>
+        <li>Даниел Михайлов: daniel.a.mihaylov@abv.bg</li>
+        <li>Християн Христов: xapu.ivanov@gmail.com</li>
+        <li>Георги Андонов: gomel9065@gmail.com</li>
+        <li>Александър Лейков: golearnweb@gmail.com</li>
+    </ul>
+</div>
+<br>
+
+<div id="links">
+    &#8482; &#62; <a href="https://trello.com/b/v3MYLHOL/listeditorboard" target="_blank">Trello Project Link</a>
+    &#8482; &#62; <a href="https://github.com/gomelGA/JS-Teamwork-List-Processing" target="_blank">GitHub Project
+    Link</a>
+</div>
+<script src="js/xapuJs.js" type="text/javascript"></script>
 </body>
-<script src="http://yui.yahooapis.com/3.18.1/build/yui/yui-min.js"></script>
-<script type="text/javascript">
-    YUI().use("node", function (Y) {
-
-        var COMMANDS = [
-            {
-                name: "do_stuff",
-                handler: doStuff
-            },
-
-            {
-                name: "greet",
-                handler: function (args) {
-                    outputToConsole("Hello " + args[0] + ", welcome to Console.");
-                }
-            }
-        ];
-
-        function processCommand() {
-            var inField = Y.one("#in");
-            var input = inField.get("value");
-            var parts = input.replace(/\s+/g, " ").split(" ");
-            var command = parts[0];
-            var args = parts.length > 1 ? parts.slice(1, parts.length) : [];
-
-            inField.set("value", "");
-
-            for (var i = 0; i < COMMANDS.length; i++) {
-                if (command === COMMANDS[i].name) {
-                    COMMANDS[i].handler(args);
-                    return;
-                }
-            }
-
-            outputToConsole("Unsupported Command: " + command);
-        }
-
-        function doStuff(args) {
-            outputToConsole("I'll just echo the args: " + args);
-        }
-
-        function outputToConsole(text) {
-            var p = Y.Node.create("<p>" + text + "</p>");
-            Y.one("#out").append(p);
-            p.scrollIntoView();
-        }
-
-        Y.on("domready", function (e) {
-            Y.one("body").setStyle("paddingBottom", Y.one("#in").get("offsetHeight"));
-            Y.one("#in").on("keydown", function (e) {
-                if (e.charCode === 13) {
-                    processCommand();
-                }
-            });
-        });
-    });
-</script>
 </html>
