Add sort functionality

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     &#8482; &#62; <a href="https://github.com/gomelGA/JS-Teamwork-List-Processing" target="_blank">GitHub Project
     Link</a>
 </div>
-<script src="js/app.js" type="text/javascript"></script>
+<script src="js/xapuJs.js" type="text/javascript"></script>
 </body>
 </html>
